add jwt and dummyJson configution, register it as services, add error handling

--- a/AbySalto.Mid/appsettings.json
+++ b/AbySalto.Mid/appsettings.json
@@ -1,12 +1,21 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Abysalto"
+    },
+    "DummyJsonOptions": {
+        "BaseAddress": "https://dummyjson.com/"
+    },
+    "JwtOptions": {
+        "Issuer": "abysalto.com",
+        "Audience": "abysalto.com",
+        "ExpirationInMinutes": 10,
+        "Secret": "abysalto.com.com.abysalto.abysalto.com"
     }
 }
